<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@color/light_grey"
    android:layout_margin="4sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="80dp"
            android:layout_height="130dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="254dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_at" />

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/u_string_title_u" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />
        </LinearLayout>

        <ImageView
            android:id="@+id/likeBtn"
            android:layout_width="74dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:src="@drawable/heart_svgrepo_com" />

    </LinearLayout>

</RelativeLayout>