<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context="com.example.activities.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@color/yellow" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:elevation="10dp"
        android:fontFamily="@font/itimcyrillic"
        android:text="@string/legend"
        android:textColor="@color/dark_grey"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        app:srcCompat="@drawable/bell_2_svgrepo_com" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_below="@id/toolbar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/yell_rect"
            android:fontFamily="@font/itimcyrillic"
            android:padding="8dp"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_background"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/itimcyrillic"
            android:padding="8dp"
            android:text="@string/podcast"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
        />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_background"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/itimcyrillic"
            android:padding="8dp"
            android:layout_weight="1"
            android:text="@string/news"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
        />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1" />

</RelativeLayout>